# FileTranslator

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.cfg
src/FileTranslator/: CLI.py
src/FileTranslator/Converters/: ImageAndPDF.py
src/FileTranslator/OCR/: IOCR.py  OCRManager.py  TesseractOCR.py
src/FileTranslator/Translator/: ITranslator.py  TranslatorManager.py  YandexOnlineTranslator.py
src/FileTranslator/Util/: Logs.py  ParseArgs.py  PathInfo.py  TranslateInfo.py
src/FileTranslator/data/: FakeText.txt
