[metadata]
name=FileTranslator
version=1.0.0
author=Egor Vashkevich
author_email=vashkevich.es@phystech.edu
description=Program to translate files
long_description=file: README.md, LICENSE
license=MIT
classifiers=
    Programming Language :: Python :: 3

[options]
;packages = find_namespace:
packages=find:
package_dir=
        =src
include_package_data=True
zip_safe=False
python_requires=>=3.10
install_requires=
    pdf2image
    Pillow
    selenium
    pytesseract
    regex
    pycountry
    PyPDF4
;    importlib-metadata; python_version<"3.7"; platform_system=='Linux'

;### using resources:
;from importlib.resources import files
;data_text = files('mypkg.data').joinpath('data1.txt').read_text()

;[options.package_data]
;* = *.txt, *.rst
;hello = *.msg

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    translate_file = FileTranslator.CLI:main

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3
